[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Jeroen De Ridder <voetsjoeba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutohedron = "0.2.4"
num = "0.2.0"
rulinalg = "0.4.2"

[dependencies.clap]
version = "2"
default-features = false
